@@ -7,6 +7,8 @@ Updated waveshape~ to use Pd memory functions.
 Updated expflam~ with Pd memory functions.
 
 Updated shoehorn~ with Pd memory functions.
+
+Updated convolver~ with Pd memory functions.
  
 Version 3.0
 
